consolidate and rm